--- a/NasaApp/app/src/main/res/layout/select_tech.xml
+++ b/NasaApp/app/src/main/res/layout/select_tech.xml
@@ -18,7 +18,7 @@
         android:layout_height="match_parent">
 
         <TextView
-            android:id="@+id/textView22"
+            android:id="@+id/txtTechHead"
             android:layout_width="408dp"
             android:layout_height="45dp"
             android:background="#126E6E"
@@ -43,7 +43,7 @@
             android:background="#AAAAAA"
             android:padding="10px"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintTop_toTopOf="@+id/textView22"
+            app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintVertical_bias="0.192"
             tools:layout_editor_absoluteX="0dp" />
 
